--- a/omnimart/package.json
+++ b/omnimart/package.json
@@ -25,7 +25,7 @@
     "dev": "cross-env npm run build:server && medusa develop"
   },
   "dependencies": {
-    "@medusajs/admin": "7.1.11",
+    "@medusajs/admin": "^7.1.11",
     "@medusajs/cache-inmemory": "^1.8.9",
     "@medusajs/cache-redis": "^1.8.9",
     "@medusajs/event-bus-local": "^1.9.8",
@@ -37,11 +37,13 @@
     "cors": "^2.8.5",
     "dotenv": "16.3.1",
     "express": "^4.17.2",
-    "medusa-fulfillment-manual": "^1.1.39",
+    "medusa-fulfillment-manual": "^1.1.40",
     "medusa-interfaces": "^1.3.8",
     "medusa-payment-manual": "^1.0.24",
-    "medusa-payment-stripe": "^6.0.7",
+    "medusa-payment-stripe": "^6.0.9",
     "medusa-plugin-algolia": "^0.2.20",
+    "medusa-plugin-ip-lookup": "^1.2.8",
+    "medusa-plugin-sendgrid": "^1.3.12",
     "prism-react-renderer": "^2.0.4",
     "typeorm": "^0.3.16"
   },
