--- a/omnimart/package.json
+++ b/omnimart/package.json
@@ -38,12 +38,13 @@
     "dotenv": "16.3.1",
     "express": "^4.17.2",
     "medusa-fulfillment-manual": "^1.1.40",
-    "medusa-interfaces": "^1.3.8",
+    "medusa-interfaces": "^1.3.9",
     "medusa-payment-manual": "^1.0.24",
     "medusa-payment-stripe": "^6.0.9",
     "medusa-plugin-algolia": "^0.2.20",
     "medusa-plugin-ip-lookup": "^1.2.8",
     "medusa-plugin-sendgrid": "^1.3.12",
+    "medusa-plugin-wishlist": "^1.1.43",
     "prism-react-renderer": "^2.0.4",
     "typeorm": "^0.3.16"
   },
